# ko-nickname

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
konickname/: __init__.py
tests/: test_main.py
